--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,7 @@
   <version>1.2.0</version>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <java.version>17</java.version>
   </properties>
   <build>
     <resources>
@@ -22,8 +21,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-          <source>17</source>
-          <target>17</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
       <plugin>
@@ -38,7 +37,7 @@
             </goals>
             <configuration>
               <outputDirectory>${project.build.directory}/classes</outputDirectory>
-              <includeArtifactIds>geoip2,maxmind-db,javatar</includeArtifactIds>
+              <includeArtifactIds>geoip2,javatar</includeArtifactIds>
             </configuration>
           </execution>
         </executions>
@@ -51,7 +50,6 @@
           <descriptorRefs>
             <descriptorRef>geoip2</descriptorRef>
             <descriptorRef>javatar</descriptorRef>
-            <descriptorRef>maxmind-db</descriptorRef>
           </descriptorRefs>
         </configuration>
       </plugin>
@@ -70,23 +68,14 @@
       <version>1.17.1-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
-    <!--dependency>
-      <groupId>uk.org.whoami.geoip</groupId>
-      <artifactId>GeoIPTools</artifactId>
-      <version>3.0.0</version>
-    </dependency-->
+    <!-- https://mvnrepository.com/artifact/com.maxmind.geoip2/geoip2 -->
     <dependency>
       <groupId>com.maxmind.geoip2</groupId>
       <artifactId>geoip2</artifactId>
-      <version>3.0.1</version>
+      <version>4.2.0</version>
       <scope>compile</scope>
     </dependency>
-    <dependency>
-      <groupId>com.maxmind.db</groupId>
-      <artifactId>maxmind-db</artifactId>
-      <version>2.0.0</version>
-      <scope>compile</scope>
-    </dependency>
+    <!-- https://mvnrepository.com/artifact/javatar/javatar -->
     <dependency>
       <groupId>javatar</groupId>
       <artifactId>javatar</artifactId>
