--- a/.editorconfig
+++ b/.editorconfig
@@ -4,11 +4,8 @@ root = true
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
-
-[*.java]
 indent_style = space
 indent_size = 4
 
-[*.{yml,xml}]
-indent_style = space
+[*.yml]
 indent_size = 2
