chore(build): DB同梱時のビルドエラーを回避する

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
                 <targetPath>.</targetPath>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
+                <includes>
+                    <include>plugin.yml</include>
+                </includes>
             </resource>
         </resources>
         <plugins>
