--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,7 +4,7 @@ messages:
     message: '&b%player_display_name% &7 has joined for the first time!'
   join-message:
     enabled: true
-    message: '&a--> &e%player_display_name%&a connected from &b%player_country% &r(&b%player_ip%&r)&a.'
+    message: '&a--> &e%player_display_name%&a connected from &b%player_country% &r(&b%player_ip_masked%&r)&a.'
   quit-message:
     enabled: true
     message: '&c<-- &e%player_display_name%&c disconnected.'
