--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,33 +1,56 @@
+# firstJoin以外のメッセージは、Minecraftのデフォルトのメッセージを上書きします
+# messages.*.enabledがfalseの場合、そのメッセージは表示(上書き)されません
+# messages.*.messageには、専用のプレースホルダーを使用することができます
+# 変数の一覧は、Readme.mdの変数についてを参照してください
+# また、メッセージの色を変更したい場合は、&(または§)を使用することでMinecraftの色コードを使用することができます
 messages:
+  # プレイヤーが初めてサーバーにログインした時に表示されるメッセージです
   firstJoin:
     enabled: true
     message: '&b%player_display_name% &7 has joined for the first time!'
+  # プレイヤーがサーバーにログインした時に表示されるメッセージです
   join:
     enabled: true
     message: '&a--> &e%player_display_name%&a connected from &b%player_country% &r(&b%player_ip_masked%&r)&a.'
+  # プレイヤーがサーバーからログアウトした時に表示されるメッセージです
   quit:
     enabled: true
     message: '&c<-- &e%player_display_name%&c disconnected.'
+  # プレイヤーがサーバーからキックされた時に表示されるメッセージです
   kick:
     enabled: true
     message: '&c<-- &e%player_display_name%&c was kicked (Reason: %reason%).'
 GeoIP2:
+  # プレースホルダーの%player_country%を使用する場合に必要です
   country:
-    # enabled: true
-    # databaseFilename: 'GeoLite2-Country.mmdb'
+  #   enabled: true
+  #   databaseFilename: 'GeoLite2-Country.mmdb'
+  #   # databaseFilename: 'GeoIP2-Country.mmdb'
+    # GeoIP2データベースをダウンロードする時に使用するURLです
     url:
       download: 'https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key={LICENSE_KEY}&suffix=tar.gz'
-      # sha256: 'https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key={LICENSE_KEY}&suffix=tar.gz.sha256'
+      # download: 'https://download.maxmind.com/app/geoip_download?edition_id=GeoIP2-Country&license_key={LICENSE_KEY}&suffix=tar.gz'
+  #     sha256: 'https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key={LICENSE_KEY}&suffix=tar.gz.sha256'
+  #     # sha256: 'https://download.maxmind.com/app/geoip_download?edition_id=GeoIP2-Country&license_key={LICENSE_KEY}&suffix=tar.gz.sha256'
+  # # プレースホルダーの%player_city%を使用する場合に必要です
   # city:
   #   enabled: false
   #   databaseFilename: 'GeoLite2-City.mmdb'
+  #   # databaseFilename: 'GeoIP2-City.mmdb'
   #   url:
   #     download: 'https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-City&license_key={LICENSE_KEY}&suffix=tar.gz'
+  #     # download: 'https://download.maxmind.com/app/geoip_download?edition_id=GeoIP2-City&license_key={LICENSE_KEY}&suffix=tar.gz'
   #     sha256: 'https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-City&license_key={LICENSE_KEY}&suffix=tar.gz.sha256'
+  #     # sha256: 'https://download.maxmind.com/app/geoip_download?edition_id=GeoIP2-City&license_key={LICENSE_KEY}&suffix=tar.gz.sha256'
+  # # データベースをダウンロードせずにAPIを使用します これだけで%player_country%と%player_city%の両方を使用できますが、データベースを使用する場合より取得に時間がかかります
   # api:
   #   # countryやcityの設定より優先されます
   #   enabled: false
-  #   # geolite.info or geoip.maxmind.com
   #   host: 'geolite.info'
+  #   # host: 'geoip.maxmind.com'
+  #   # licenseKeyの一覧を表示する際にリストの上部に表示される"Account ID: "の後に続く数字です ~を削除して数字を入力してください
   #   accountID: ~
+  # GeoIP2データベースを更新する際に使用するライセンスキーです 設定方法はReadme.mdのLicenseKeyについてを参照してください
   licenseKey: ''
+# # config.ymlのバージョンです プラグインから指示があった場合にのみ変更してください
+# version: 1
