--- a/pom.xml
+++ b/pom.xml
@@ -150,11 +150,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/javatar/javatar -->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
         <dependency>
-            <groupId>javatar</groupId>
-            <artifactId>javatar</artifactId>
-            <version>2.5</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.25.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
