--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
                 <directory>.</directory>
                 <filtering>false</filtering>
                 <includes>
-                    <include>LICENSE</include>
+                    <include>LICENSE.txt</include>
                     <include>README.md</include>
                 </includes>
             </resource>
